[gd_scene load_steps=16 format=3 uid="uid://c7eqf6aoh76jh"]

[ext_resource type="Script" uid="uid://g7dxs5iieei2" path="res://01_script/_01_main.gd" id="1_nqwxw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jo4d4"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rkfu"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8r3ck"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtnm3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uj51e"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyjm7"]
bg_color = Color(0, 0, 0, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31epe"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_di02h"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1fly"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pxaw"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ff6wn"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p537q"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08ygc"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_irln0"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nqwxw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(0.12955844, 0.12955847, 0.12955844, 1)

[node name="clicker_name" type="RichTextLabel" parent="."]
z_index = -1
offset_left = 390.0
offset_top = 660.0
offset_right = 690.0
offset_bottom = 1260.0

[node name="clicker_stand" type="RichTextLabel" parent="."]
offset_left = 25.0
offset_top = 595.0
offset_right = 925.0
offset_bottom = 1195.0
theme_override_font_sizes/normal_font_size = 380
theme_override_styles/normal = SubResource("StyleBoxFlat_jo4d4")
theme_override_styles/focus = SubResource("StyleBoxFlat_0rkfu")
theme_override_styles/background = SubResource("StyleBoxFlat_8r3ck")
theme_override_styles/fill = SubResource("StyleBoxFlat_rtnm3")
bbcode_enabled = true
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttons" type="Node2D" parent="."]
z_index = 2

[node name="top" type="Button" parent="buttons"]
offset_left = -5.0
offset_right = 1075.0
offset_bottom = 1152.0
theme_override_styles/normal = SubResource("StyleBoxFlat_uj51e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vyjm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_31epe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_di02h")
theme_override_styles/focus = SubResource("StyleBoxFlat_e1fly")

[node name="button" type="Button" parent="buttons"]
offset_top = 1152.0
offset_right = 1080.0
offset_bottom = 1920.0
theme_override_styles/normal = SubResource("StyleBoxFlat_0pxaw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ff6wn")
theme_override_styles/hover = SubResource("StyleBoxFlat_p537q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_08ygc")
theme_override_styles/focus = SubResource("StyleBoxFlat_irln0")

[node name="side_button" type="Node2D" parent="buttons"]

[node name="side_buttons" type="VBoxContainer" parent="."]
clip_contents = true
offset_left = 955.0
offset_top = 584.0
offset_right = 1080.0
offset_bottom = 1225.0

[node name="side_buttons1_jump1" type="Button" parent="side_buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
text = "1"

[node name="side_buttons2_jump2" type="Button" parent="side_buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
text = "5"

[node name="side_buttons3_jump3" type="Button" parent="side_buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
text = "10"

[node name="side_buttons4_setting" type="Button" parent="side_buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2

[node name="side_buttons5_reset" type="Button" parent="side_buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
text = "reset"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(544, 960.00006)
scale = Vector2(1e-05, 1e-05)

[connection signal="pressed" from="buttons/top" to="." method="_on_top_pressed"]
[connection signal="pressed" from="buttons/button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="side_buttons/side_buttons1_jump1" to="." method="_on_side_buttons_1_jump_1_pressed"]
[connection signal="pressed" from="side_buttons/side_buttons2_jump2" to="." method="_on_side_buttons_2_jump_2_pressed"]
[connection signal="pressed" from="side_buttons/side_buttons3_jump3" to="." method="_on_side_buttons_3_jump_3_pressed"]
[connection signal="pressed" from="side_buttons/side_buttons5_reset" to="." method="_on_side_buttons_5_reset_pressed"]
